--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checckout@v3
+        uses: actions/checkout@v3
 
       - name: Install packages
         run: npm ci
